template.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: This CloudFormation stack is to deploy a Parsec Gaming Rig

Mappings:
  RegionMap:
    eu-north-1:
      "WindowServer2019": "ami-0a5544d5b970b291b"
    ap-south-1:
      "WindowServer2019": "ami-07545b3a1f4619f4b"
    eu-west-3:
      "WindowServer2019": "ami-0be23ddaab6554f34"
    eu-west-2:
      "WindowServer2019": "ami-07d5dc48e982cf42d"
    eu-west-1:
      "WindowServer2019": "ami-0a174bb076b94a327"
    ap-northeast-3:
      "WindowServer2019": "ami-0e9d54655e9dd1f72"
    ap-northeast-2:
      "WindowServer2019": "ami-0c276975654214bf3"
    ap-northeast-1:
      "WindowServer2019": "ami-04b205fe787b460d9"
    sa-east-1:
      "WindowServer2019": "ami-0a8e06a326feb20e2"
    ca-central-1:
      "WindowServer2019": "ami-014f55f965f51c865"
    ap-east-1:
      "WindowServer2019": "ami-0e74d0a9f2299cbd7"
    ap-southeast-1:
      "WindowServer2019": "ami-03cfcf203483cb4f0"
    ap-southeast-2:
      "WindowServer2019": "ami-0eb941b8e00feef88"
    eu-central-1:
      "WindowServer2019": "ami-0e0564dc8e882f217"
    us-east-1:
      "WindowServer2019": "ami-00cb4c0d60b9476f4"
    us-east-2:
      "WindowServer2019": "ami-067317d2d40fd5919"
    us-west-1:
      "WindowServer2019": "ami-0ed87187d8ca91f34"
    us-west-2:
      "WindowServer2019": "ami-0d7d80db021ba0d11"

Parameters:
  GamingInstanceType:
    Type: String
    AllowedValues:
      [
        "g2.2xlarge",
        "g3.4xlarge",
        "g3.8xlarge",
        "g3.16xlarge",
        "g4dn.large",
        "g4dn.2xlarge",
        "g4dn.4xlarge",
        "g4dn.8xlarge",
        "g4dn.16xlarge",
      ]
    Default: "g4dn.4xlarge"
  DefaultRootEbsSize:
    Type: Number
    Default: 100
    MinValue: 100

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ParsecGamingRigSecurityGroup
      GroupDescription: Parsec Gaming Rig Security Group
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 5900
          ToPort: 5900
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 3389
          ToPort: 3389
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 8000
          ToPort: 8005
          IpProtocol: udp

  GamingInstanceLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: AWSParsecGamingRigSpotInstanceLaunchTemplate
      LaunchTemplateData:
        SecurityGroupIds:
          - !GetAtt SecurityGroup.GroupId
        ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", "WindowServer2019"]
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: !Ref DefaultRootEbsSize

  GamingInstance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: miklet
      InstanceType: !Ref GamingInstanceType
      LaunchTemplate:
        LaunchTemplateId: !Ref GamingInstanceLaunchTemplate
        Version: !GetAtt GamingInstanceLaunchTemplate.LatestVersionNumber
